--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,8 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap");
+
 a {
   text-decoration: none;
 }
 .navbar {
-  background-color: #1f5156;
+  background-color: var(--secon);
   height: 80px;
   display: flex;
   justify-content: center;
@@ -23,13 +25,14 @@ a {
 }
 
 .nav-logo {
-  color: #f5b921;
+  color: black;
   align-items: center;
   margin-left: 20px;
   cursor: pointer;
   text-decoration: none;
   font-size: 2rem;
   flex-grow: 1;
+  font-family: lato;
 }
 
 .nav-menu {
@@ -66,12 +69,12 @@ a {
 
 .nav-item:hover:after {
   width: 100%;
-  background: #ffdd40;
+  background: black;
 }
 
 .nav-item .active {
-  color: #ffdd40;
-  border: 1px solid #ffdd40;
+  color: black;
+  border: 1px solid black;
 }
 
 .nav-icon {
@@ -92,14 +95,14 @@ a {
   }
 
   .nav-menu.active {
-    background: #1f5156;
+    background: var(--secon);
     left: 0px;
     opacity: 1;
     transition: all 0.5s ease;
     z-index: 1;
   }
   .nav-item .active {
-    color: #ffdd40;
+    color: black;
     border: none;
   }
   .nav-links {
@@ -117,6 +120,6 @@ a {
     font-size: 1.8rem;
 
     cursor: pointer;
-    color: #ffdd40;
+    color: black;
   }
 }
