--- a/src/App.css
+++ b/src/App.css
@@ -15,12 +15,14 @@ html {
   font-size: 100%;
   box-sizing: border-box;
   scroll-behavior: smooth;
+  margin: 0;
+  min-height: 100vh;
 }
 *,
 *::before,
 *::after {
   padding: 0;
-  margin: 0;
+
   box-sizing: inherit;
   list-style: none;
   list-style-type: none;
@@ -36,4 +38,9 @@ body {
   line-height: 1.5;
   color: var(--color-black);
   background: var(--color-white);
+  min-height: 100vh;
+  margin: 0;
+}
+.main-section {
+  margin: auto;
 }
