--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -3,7 +3,7 @@
 }
 .bcard {
   background-color: #f8f9fa;
-  margin: 30px auto;
+  margin: auto;
   border-radius: 10px;
   padding: 0 0 20px 0;
   -webkit-box-shadow: 5px 5px 13px 0px rgba(50, 50, 50, 0.39);
