--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -7,6 +7,7 @@ a {
   background-color: var(--secon);
   height: 80px;
   display: flex;
+  /* margin-bottom: ; */
   justify-content: center;
   align-items: center;
   font-size: 1.2rem;
